autoloader suka ne poluchaetsia

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,7 +8,7 @@ auxiliary.org-netbeans-modules-php-apigen.todo=false
 auxiliary.org-netbeans-modules-php-apigen.tree=true
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\home\\g-dogg\\C:\\Program Files (x86)\\NetBeans 8.0.2\\\u041f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435
+copy.src.target=/home/g-dogg/C:\\home\\g-dogg\\C:\\Program Files (x86)\\NetBeans 8.0.2\\\u041f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435
 index.file=index.php
 remote.connection=lamp-20cc2f
 remote.directory=/coordinat
