adding Pux - router. Not work jsonand curl class

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "g_dogg@xakep.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "corneltek/pux": "~1.5"
+    }
 }
