--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "autoload": {
+        "psr-4": {
+            "Routing\\": "src/Routing"
+        },
         "classmap": [
             "core/"
         ]
