edited router and autoload. TODO DI for view and controller

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
         "psr-4": {},
         "classmap": [
             "core/",
-            "Routing/",
+            "models/",
             "controllers/",
             "views/"
         ]
